# hearth

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/cache/: mod.rs
src/cli/: ai.rs  doctor.rs  duplicates.rs  list.rs  mod.rs  orphans.rs  size.rs
src/fs_util/: mod.rs  sizes.rs  symlink.rs
src/model/: mod.rs
src/output/: json.rs  table.rs
src/scan/: bun.rs  cargo.rs  gh_ext.rs  go.rs  homebrew.rs  mod.rs  npm.rs  path_scan.rs  rustup.rs
src/scan/snapshots/: hearth__scan__cargo__tests__parses_crates2_fixture.snap  hearth__scan__homebrew__tests__parses_brew_info_v2_fixture.snap  hearth__scan__npm__tests__parses_npm_ls_global_fixture.snap
tests/fixtures/: brew_info.json  crates2.json  npm_ls.json
